# embedded-systems-lab

./: .gitignore  AGENT-GUIDE.md  README.md  ROADMAP.md
algorithms/leetcode/: 01-array-easy.md  02-string-easy.md  03-array-easy.md  04-array-medium.md  README.md
experiments/memory/custom-memcpy/: CMakeLists.txt  README.md  custom_string.c  custom_string.h  main.c
notes/modern-cpp/: README.md
notes/retros/: 2026-07-15-p0-w1.md
phases/: phase-0-raw-c.md  phase-1-modern-cpp.md  phase-2-embedded-fundamentals.md  phase-3-rtos.md  phase-4-architecture.md  phase-5-performance.md  phase-6-capstone.md
